--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		<!-- Site Title -->
 		<title>Personal</title>
 
+		<!--======================= Files ServiceWorker     =============-->
+		<link rel="manifest" href="./manifest.webmanifest"></link>
+		
+			
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
 			CSS
@@ -24,7 +28,7 @@
 			<link rel="stylesheet" href="css/font-awesome.min.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/jquery-ui.css">				
+			<!--<link rel="stylesheet" href="css/jquery-ui.css">-->				
 			<link rel="stylesheet" href="css/nice-select.css">							
 			<link rel="stylesheet" href="css/animate.min.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">				
@@ -652,6 +656,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/simple-skillbar.js"></script>							
 			<script src="js/owl.carousel.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
+			<script src="js/main.js"></script>
+			<script src= "./registerSW.js"></script>	
 		</body>
 	</html>
