--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
 				</div>
 		  </div>
 
+		  <div id="promptNotification" class="prompt hide bg-light border-top" style="z-index: 999999;position: fixed;width: 100%;">
+			<div class="font-weight-bold">Mostrar notificaciones</div>
+			<small>Desea recibir notificaciones de esta aplicacion</small>
+			<div class="text-right">
+				<button id="buttonAccept" type="button" class="font-weight-bold text-muted btn-sm btn btn-link">Permitir</button>
+				<button id="buttonDenied" type="button" class="font-weight-bold text-primary btn-sm btn btn-link">Bloquear</button>
+			</div>
+	  </div>
+
 			<!-- start banner Area -->
 			<section class="banner-area">
 				<div class="container">
