add buttonsHtmlCode que contine el html de los botones

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 			<link rel="stylesheet" href="css/animate.min.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">				
 			<link rel="stylesheet" href="css/main.css">
-
-		<style>
+			<link rel="stylesheet" href="pwa/pwaStyles.css">	
+		<!-- <style>
 			.hide {display: none !important;}
 			.show {display: block !important;}
-		</style>
+		</style> -->
 		
 		</head>
 		<body>	
@@ -78,23 +78,23 @@
 		    </div>
 		  </header><!-- #header -->
 
-		  <div id="prompt" class="prompt hide bg-light border-top" style="z-index: 999999;position: fixed;width: 100%;">
+		  <!-- <div id="prompt" class="prompt hide bg-light border-top" style="z-index: 999999;position: fixed;width: 100%;">
 				<div class="font-weight-bold">Agregar a pantalla de inicio</div>
 				<small>Esta aplicacion puede ser instalada en su celular.</small>
 				<div class="text-right">
 					<button id="buttonCancel" type="button" class="font-weight-bold text-muted btn-sm btn btn-link">No, gracias</button>
 					<button id="buttonAdd" type="button" class="font-weight-bold text-primary btn-sm btn btn-link">AGREGAR</button>
 				</div>
-		  </div>
+		  </div> -->
 
-		  <div id="promptNotification" class="prompt hide bg-light border-top" style="z-index: 999999;position: fixed;width: 100%;">
+		  <!-- <div id="promptNotification" class="prompt hide bg-light border-top" style="z-index: 999999;position: fixed;width: 100%;">
 			<div class="font-weight-bold">Mostrar notificaciones</div>
 			<small>Desea recibir notificaciones de esta aplicacion</small>
 			<div class="text-right">
 				<button id="buttonAccept" type="button" class="font-weight-bold text-muted btn-sm btn btn-link">Permitir</button>
 				<button id="buttonDenied" type="button" class="font-weight-bold text-primary btn-sm btn btn-link">Bloquear</button>
 			</div>
-	  </div>
+	  </div> -->
 
 			<!-- start banner Area -->
 			<section class="banner-area">
@@ -683,6 +683,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>
 			<script src= "./registerSW.js"></script>
-
+			<script src= "./pwa/buttonsHtmlCode.js"></script>
 		</body>
 	</html>
