--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				            <ul>
 				              <li><a href="#">Item One</a></li>
 				              <li><a href="#">Item Two</a></li>
+				              <li><a href="test.php">PHP test</a></li>
 				            </ul>
 				          </li>					                		
 			            </ul>
