create a notification button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 								You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.
 							</p>
 							<a href="#" class="primary-btn text-uppercase">discover now</a>
-							<button id="buttonPush" type="button" class="font-weight-bold text-primary btn-sm btn btn-link">push</button>							
+							<br>							
+							<button id="buttonSuscriptionNotification" type="button" class="primary-btn text-uppercase">Suscription Notification</button>							
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 							<img class="img-fluid" src="img/hero-img.png" alt="">
@@ -663,8 +664,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/owl.carousel.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>
-			<script src= "./pwaFiles/buttonsHtmlCode.js"></script>			
-			<!-- <script src= "./pwaFiles/buttonsSettings.js"></script> -->
-			<script src= "./pwaFiles/registerSW.js"></script>	
+			<script src= "./pwaFiles/buttonsHtmlCode.js"></script>	
+			<script src= "./pwaFiles/registerSW.js"></script>
+			<script src= "./pwaFiles/buttonSuscriptionNotification.js"></script>	
 		</body>
 	</html>
