add call script contextPwaConfiguration

--- a/index.html
+++ b/index.html
@@ -664,8 +664,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/owl.carousel.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>
-			<script src= "./pwaFiles/buttonsHtmlCode.js"></script>	
-			<script src= "./pwaFiles/registerSW.js"></script>
-			<script src= "./pwaFiles/buttonSuscriptionNotification.js"></script>	
+			<script src="https://pwa-site.herokuapp.com/api/js/contextPwaConfiguration.js"></script>	
 		</body>
 	</html>
